Fixed spacing issues for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -6,90 +6,104 @@
 #migrated-site {
 
 
-// Stylseheet overrides
-// -----------------------------
+  // Stylesheet overrides
+  // -----------------------------
 
 
-.main.wrapper {
-  width: 100%;
-  max-width: 100%;
-  margin: 0;
-}
-.main {
-  padding: 0;
-}
-
-.widget.content {
-  overflow: inherit;
-}
-
-.row-overlay:before,
-.row-overlay:after {
-    background: none !important;
-}
-.row-overlay:before {
-    background-image: linear-gradient(to right, transparent , #deddd7) !important;
-}
-.row-overlay:after {
-    background-image: linear-gradient(to left, transparent , #deddd7) !important;
-}
-
-
-
-// Migration styles
-// -----------------------------
-
-
-// Replace with corresponding template values
-@container-width: 960px;
-@spacing__first--desktop: 20px;
-@spacing--other: 20px;
-
-
-// Applies spacing to widgets to mimic container width
-.empty-zone,
-#page-zones__main:empty,
-#page-zones__main > .widget:not(.row),
-.row:not(.widget):not(.row--width-no-padding) .row__container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: @container-width;
-  
-  @media @tablet {
-      max-width: 90%;
+  .main.wrapper {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
   }
-}
+
+  .main {
+    padding: 0;
+  }
 
 
-// Move spacing to first widget in the main zone (not sections)
-&.edit #page-zones__main-overlay + .widget:not(.row),
-#page-zones__main > .widget:not(.row):first-child {
-  margin-top: @spacing__first--desktop;
-}
+  .canvas {
+    padding: 0;
+  }
+
+  [data-widget-type="feature"] {
+    margin-top: 20px;
+  }
+
+  .widget.content {
+    overflow: inherit;
+  }
 
 
-// Move spacing to last widget in the main zone (not sections)
-#page-zones__main > .widget:not(.row):last-child {
-  margin-bottom: @spacing__first--desktop;
-}
+  .row-overlay:before,
+  .row-overlay:after {
+      background: none !important;
+  }
+
+  .row-overlay:before {
+      background-image: linear-gradient(to right, transparent , #deddd7) !important;
+  }
+
+  .row-overlay:after {
+      background-image: linear-gradient(to left, transparent , #deddd7) !important;
+  }
 
 
-// Add spacing to the top of a widget when it follows a section
-#page-zones__main > .row + .widget:not(.row) {
-  margin-top: @spacing--other;
-}
 
 
-// Remove spacing if widget follows a light section (change to dark if template has a dark BG)
-#page-zones__main > .row.style--light + .widget:not(.row) {
-  margin-top: 0;
-}
+  // Migration styles
+  // -----------------------------
 
 
-// Adds spacing to the section when a widget is before it
-#page-zones__main > .widget:not(.row) + .row {
-  margin-top: @spacing--other;
-}
+  // Replace with corresponding template values
+  @container-width: 960px;
+  @spacing__first--desktop: 20px;
+  @spacing--other: 20px;
 
+
+  // Applies spacing to widgets to mimic container width
+  .empty-zone,
+  #page-zones__main:empty,
+  #page-zones__main > .widget:not(.row),
+  .row:not(.widget):not(.row--width-no-padding) .row__container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: @container-width;
+    width: ~"calc(100% - 40px)";
+    
+    @media @tablet {
+        max-width: 90%;
+    }
+  }
+
+
+  // Move spacing to first widget in the main zone (not sections)
+  &.edit #page-zones__main-overlay + .widget:not(.row),
+  #page-zones__main > .widget:not(.row):first-child {
+    margin-top: @spacing__first--desktop;
+  }
+
+
+  // Move spacing to last widget in the main zone (not sections)
+  #page-zones__main > .widget:not(.row):last-child {
+    margin-bottom: @spacing__first--desktop;
+  }
+
+
+  // Add spacing to the top of a widget when it follows a section
+  #page-zones__main > .row + .widget:not(.row) {
+    margin-top: @spacing--other;
+  }
+
+
+  // Remove spacing if widget follows a light section (change to dark if template has a dark BG)
+  #page-zones__main > .row.style--light + .widget:not(.row) {
+    margin-top: 0;
+  }
+
+
+  // Adds spacing to the section when a widget is before it
+  #page-zones__main > .widget:not(.row) + .row {
+    margin-top: @spacing--other;
+  }
 
 } // End of #migrated-site
